<resources>
    <!-- Main Activity -->
    <string name="app_name">MemoriesApp</string>
    <string name="add_memory">addMemory</string>
    <!-- Create Memory Activity -->
    <string name="edit_text_memory_title_hint">Title of the Memory</string>
    <string name="image_reminder_content_description">Reminder</string>
    <string name="edit_text_date_hint">Date</string>
    <string name="edit_text_description_hint">Description</string>
    <string name="button_photo_text">Photo</string>
    <string name="button_video_text">Video</string>
    <string name="button_audio_text">Audio</string>
    <string name="photo_image_content_description">Photo Image Content Description</string>
    <string name="video_image_content_description">Video ImageContent Description</string>
    <string name="audio_image_content_description">Audio ImageContent Description</string>
    <string name="delete_memory">Delete Memory</string>
    <string name="editmemory">editMemory</string>
    <string name="category_icon">category icon</string>
    <string name="tvCategory">Category</string>
    <string-array name="category_array">
        <item>Good</item>
        <item>Bad</item>
        <item>Celebration</item>
        <item>BlackList</item>
        <item>Love</item>
        <item>Friends</item>
        <item>Travel</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
