<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NestedWeights"
    tools:context=".ManageMemory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollIndicators="right"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_text_memory_title_hint"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:hint="@string/edit_text_date_hint"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textAlignment="textStart" />

            <ImageView
                android:id="@+id/imgReminder"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_reminder_content_description"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/edit_text_description_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/button_photo_text" />

            <Button
                android:id="@+id/btnVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/button_video_text" />

            <Button
                android:id="@+id/btnAudio"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_audio_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtnPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/photo_image_content_description"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/imgBtnVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/video_image_content_description"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/imgBtnAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/audio_image_content_description"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <!--
        <androidx.appcompat.widget.ScrollingTabContainerView.TabView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
        -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>