<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewMemory">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tvCategory" />

                <TextView
                    android:id="@+id/tvCategoryItem"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/tvCategory" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:text="@string/edit_text_date_hint"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tvDateItem"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textAlignment="textStart" />

                <ImageView
                    android:id="@+id/imgReminder"
                    android:layout_width="18dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/image_reminder_content_description"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/edit_text_description_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/button_photo_text" />

                <Button
                    android:id="@+id/btnVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/button_video_text" />

                <Button
                    android:id="@+id/btnAudio"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_audio_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgBtnPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo_image_content_description"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/imgBtnVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/video_image_content_description"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/imgBtnAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/audio_image_content_description"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

        <fragment
            android:id="@+id/mapFragment"
            android:name="es.usj.mastertsa.fm.memoriesapp.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:layout="@layout/fragment_map" />

</androidx.constraintlayout.widget.ConstraintLayout>